@@ -4,7 +4,6 @@ TODO
 Required for alpha 4
 --------------------
 
- - Implement READ [SAVE|RESTORE]
  - Syntax highlighting of decimals with no leading zero
 
 
