@@ -53,8 +53,12 @@ Version 2022.01.00-a4 - ??-???-2022:
         - beware that some function keys may be captured by the Linux window
           manager and never passed on to MMBasic.
   - Added OPTION SEARCH PATH <path> command as per CMM2.
-  - Added OPTION [SAVE | LOAD] <filename> command.
+  - Added OPTION {SAVE | LOAD} <filename> command.
   - Added OPTION RESET [ALL | <option>] command.
+  - Added PEEK(DATAPTR) function and POKE DATAPTR ptr% command for getting
+    and setting the DATA read pointer.
+  - Added READ {RESTORE | SAVE} command for pushing and popping the DATA read
+    position to an internal stack as per MMB4W.
   - Changed OPTION LIST to only show options that differ from their defaults:
          - use OPTION LIST ALL to list all options.
   - Changed OPTION <option> <value> command so that for all options with
@@ -100,7 +104,7 @@ Version 2022.01.00-a3 - 16-Jan-2022:
         OPEN "/dev/ttyS0: 115200" As #1
     this is very preliminary and in need of extensive user testing,
     see README for details.
-  - Added XMODEM {SEND|RECEIVE} file$, #fnbr command:
+  - Added XMODEM {SEND | RECEIVE} file$, #fnbr command:
     - #fnbr must first have been OPENed as a serial port.
     - unlike other MMBasic versions, MMB4L cannot use XMODEM to send to or
       receive from the console.
